--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     th, td { border: 1px solid #ccc; padding: 5px; text-align: center; }
     input { width: 100%; box-sizing: border-box; }
     tfoot td { font-weight: bold; background: #f0f0f0; }
-    button { margin-top: 10px; padding: 10px; width: 100%; font-size: 16px; }
+    button { margin-top: 10px; padding: 10px; font-size: 16px; }
+    #clear-btn { font-size: 12px; padding: 4px 8px; margin-left: 10px; }
   </style>
 </head>
 <body>
@@ -22,10 +23,9 @@
       <tr>
         <th>#</th>
         <th>Mashina Raqami</th>
-        <th>Ismi</th>
         <th>Sana</th>
         <th>Qop</th>
-        <th>Kg (Tonna)</th>
+        <th>Kg</th>
         <th>Narx</th>
         <th>Jami Narx</th>
       </tr>
@@ -33,7 +33,7 @@
     <tbody id="table-body"></tbody>
     <tfoot>
       <tr>
-        <td colspan="4">Jami</td>
+        <td colspan="3">Jami</td>
         <td id="total-qop">0</td>
         <td id="total-kg">0</td>
         <td></td>
@@ -44,7 +44,7 @@
 
   <button onclick="addRow()">Yangi Qator Qo‘shish</button>
   <button onclick="saveData()">💾 Saqlash</button>
-  <button onclick="clearData()">🗑 Tozalash</button>
+  <button onclick="clearData()" id="clear-btn">🗑 Tozalash</button>
 
   <script>
     let rowCount = 0;
@@ -57,7 +57,6 @@
       row.innerHTML = `
         <td>${rowCount}</td>
         <td><input type="text" value="${data.plate || ''}" onchange="updateTotals()"></td>
-        <td><input type="text" value="${data.name || ''}" onchange="updateTotals()"></td>
         <td><input type="date" value="${data.date || ''}" onchange="updateTotals()"></td>
         <td><input type="number" value="${data.qop || 0}" onchange="updateTotals()"></td>
         <td><input type="number" step="0.01" value="${data.kg || 0}" onchange="updateTotals()"></td>
@@ -74,15 +73,15 @@
       let totalQop = 0, totalKg = 0, totalSum = 0;
 
       rows.forEach(row => {
-        const qop = parseFloat(row.children[4].querySelector('input').value) || 0;
-        const kg = parseFloat(row.children[5].querySelector('input').value) || 0;
-        const narx = parseFloat(row.children[6].querySelector('input').value) || 0;
-        const jami = kg * narx;
+        const qop = parseFloat(row.children[3].querySelector('input').value) || 0;
+        const kg = parseFloat(row.children[4].querySelector('input').value) || 0;
+        const narx = parseFloat(row.children[5].querySelector('input').value) || 0;
+        const jami = qop * kg * narx;
 
-        row.children[7].textContent = jami.toFixed(2);
+        row.children[6].textContent = jami.toFixed(2);
 
         totalQop += qop;
-        totalKg += kg;
+        totalKg += qop * kg;
         totalSum += jami;
       });
 
@@ -99,11 +98,10 @@
         const inputs = row.querySelectorAll('input');
         data.push({
           plate: inputs[0].value,
-          name: inputs[1].value,
-          date: inputs[2].value,
-          qop: inputs[3].value,
-          kg: inputs[4].value,
-          price: inputs[5].value
+          date: inputs[1].value,
+          qop: inputs[2].value,
+          kg: inputs[3].value,
+          price: inputs[4].value
         });
       });
 
@@ -125,7 +123,6 @@
       }
     }
 
-    // Avtomatik yuklash
     window.onload = loadData;
   </script>
 
